HelloUltraviolet/Fixtures/RejectedSource/Statements/LetAnnotationMismatch/Expected.uv
//! Expected diagnostic metadata for the LetAnnotationMismatch rejected-source specimen.

expectedDiagnostic("E-MOD-2402", "rule.18.T-LetStmt-Ann-Mismatch")
